[package]
name = "clipper-wayland-files"
version = "1.0.0"
edition = "2024"
authors = ["NinjaDWrex"]
description = "Simple cli application for copying text file contents to the clipboard on wayland based systems"
repository = "https://github.com/NinjaDWrex/clipper"
license = "GPL-3.0-only"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
clap = {version = "4.0", features =["derive"]}

[[bin]]
name = "clp"
path = "src/main.rs"
